[package]
name = "noumenon"
version = "0.1.0"
edition = "2021"

[dependencies]
half = "2.1.0"
binrw = "0.11.2"
image = "0.24.2"
squish = "2.0.0-beta1"
# fbxcel = "0.8.1"
ironworks = {git = "https://github.com/ackwell/ironworks", rev = "bd787883d324f3a150bce5f1ab348d86e770e23e", features = ["ffxiv", "sqpack"]}